[tool.black]
line-length = 100

[tool.isort]
line_length = 100
multi_line_output = 3
profile = "black"

[tool.poetry]
name = "cl"
version = "0.1.0"
description = "Craigslist scraper."
authors = ["Tim Coutinho <tmcoutinho42@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
beautifulsoup4 = "^4.9"
requests = "^2.23"
boto3 = "^1.14"
awscli = "^1.18"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
aws-sam-cli = "^1.15"
isort = "^5.6.4"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
